docs: nav tweaks

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -8,9 +8,9 @@
   pages:
     - title: Get started
       path: /designing/get-started
-    - title: Kits
+    - title: Design kits
       path: /designing/kits/sketch
-    - title: Design resources
+    - title: Other resources
       path: /designing/design-resources
     - title: Tutorials
       path: /designing/tutorials
