chore(release): v10.18.0-rc.0 smoketest

--- a/package.json
+++ b/package.json
@@ -37,18 +37,18 @@
     "/node_modules/*"
   ],
   "resolutions": {
-    "carbon-components": "^10.17.0",
-    "carbon-components-react": "^7.17.0"
+    "carbon-components": "^10.18.0-rc.0",
+    "carbon-components-react": "^7.18.0-rc.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
     "@carbon/charts": "0.34.11",
     "@carbon/charts-react": "0.34.11",
-    "@carbon/elements": "^10.16.0",
-    "@carbon/icons": "^10.15.0",
-    "@carbon/icons-react": "^10.15.0",
-    "@carbon/pictograms": "^10.16.0",
-    "@carbon/pictograms-react": "^10.16.0",
+    "@carbon/elements": "^10.17.0-rc.0",
+    "@carbon/icons": "^10.16.0-rc.0",
+    "@carbon/icons-react": "^10.16.0-rc.0",
+    "@carbon/pictograms": "^10.17.0-rc.0",
+    "@carbon/pictograms-react": "^10.17.0-rc.0",
     "@loadable/babel-plugin": "^5.12.0",
     "@loadable/component": "^5.12.0",
     "@loadable/webpack-plugin": "^5.12.0",
@@ -56,8 +56,8 @@
     "@philpl/buble": "^0.19.7",
     "babel-eslint": "^10.1.0",
     "babel-preset-gatsby": "^0.2.29",
-    "carbon-components": "^10.16.0",
-    "carbon-components-react": "^7.16.0",
+    "carbon-components": "^10.18.0-rc.0",
+    "carbon-components-react": "^7.18.0-rc.0",
     "change-case": "^4.1.1",
     "classnames": "^2.2.6",
     "codesandbox": "^2.1.10",
