docs: update to remove case studies

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -2,8 +2,8 @@
   pages:
     - title: What is Carbon?
       path: /all-about-carbon/what-is-carbon
-    - title: Case studies
-      path: /all-about-carbon/case-studies
+    - title: How we work
+      path: /all-about-carbon/how-we-work
 - title: Designing
   pages:
     - title: Get started
