docs: broken link fixes part 3

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -186,13 +186,11 @@
 - title: Community assets
   pages:
     - title: Overview
-      path: /community-assets/overview
+      path: /community/overview
     - title: Component index
-      path: /community-assets/component-index
+      path: /community/component-index
     - title: Domain guidance
-      path: /community-assets/domain-guidance
-    - title: Pattern index
-      path: /community-assets/pattern-index
+      path: /community/domain-guidance
 - title: Data visualization
   pages:
     - title: Get started
