chore(package.json): add resolutions for icon packages

--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
     "/node_modules/*"
   ],
   "resolutions": {
+    "@carbon/icons": "^10.16.0-rc.0",
+    "@carbon/icons-react": "^10.16.0-rc.0",
+    "@carbon/pictograms": "^10.17.0-rc.0",
+    "@carbon/pictograms-react": "^10.17.0-rc.0",
     "carbon-components": "^10.18.0-rc.0",
     "carbon-components-react": "^7.18.0-rc.0"
   },
