--- a/conf.d/rewrite.conf
+++ b/conf.d/rewrite.conf
@@ -14,6 +14,7 @@ rewrite /experimental/(.*) /community/patterns/\$1 permanent;
 # IA Updates 8/2020
 # All about Carbon
 rewrite /get-started/about-carbon /all-about-carbon/what-is-carbon permanent;
+rewrite /contributing/governance /all-about-carbon/how-we-work permanent;
 
 # Designing
 rewrite /get-started/design/(.*) /designing/get-started/kits/\$1 permanent;
