docs: designing get started, news & articles

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -46,9 +46,9 @@
       path: /contributing/add-ons
 - title: What's happening
   pages:
-    - title: Changelog & roadmap
+    - title: Changelog and roadmap
       path: /whats-happening/changelog-and-roadmap
-    - title: News & reading
+    - title: News and articles
       path: /whats-happening/news-and-articles
     - title: Events
       path: /whats-happening/events
