update nav for community section

--- a/conf.d/rewrite.conf
+++ b/conf.d/rewrite.conf
@@ -37,3 +37,6 @@ rewrite /resources /developing/developer-resources permanent;
 rewrite /tutorial/angular(.*) /developing/angular-tutorial\$1 permanent;
 rewrite /tutorial/react(.*) /developing/react-tutorial\$1 permanent;
 rewrite /tutorial/vue(.*) /developing/vue-tutorial\$1 permanent;
+
+# Community assets
+# add when index is live - rewrite /community/components /community/component-index permanent;
