--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -185,8 +185,10 @@
   pages:
     - title: Overview
       path: /community/overview
-    - title: Component index
-      path: /community/component-index
+    - title: Components
+      path: /community/components
+    - title: Patterns
+      path: /community/patterns
     - title: Domain guidance
       path: /community/domain-guidance
 - title: Data visualization
