feat(component-index): redirect, and css updates

--- a/conf.d/rewrite.conf
+++ b/conf.d/rewrite.conf
@@ -28,3 +28,6 @@ rewrite /experimental/order-summary-template/(.*) https://pages.github.ibm.com/C
 
 # Experimental -> community
 rewrite /experimental/(.*) /community/patterns/\$1 permanent;
+
+# Community index
+rewrite /community/components /community/component-index permanent;
