--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -201,8 +201,8 @@
   pages:
     - title: Overview
       path: /community/overview
-    - title: Components
-      path: /community/components
+    - title: Component Index
+      path: /community/component-index
     - title: Patterns
       path: /community/patterns
     - title: Domain guidance
