--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -1,4 +1,4 @@
-- title: All about Carbon
+- title: All about Carbon 1
   pages:
     - title: What is Carbon?
       path: /all-about-carbon/what-is-carbon
