--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -201,7 +201,7 @@
   pages:
     - title: Overview
       path: /community/overview
-    - title: Component index
+    - title: Component Index
       path: /community/component-index
     - title: Patterns
       path: /community/patterns
