update side nav for component index

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -185,7 +185,7 @@
   pages:
     - title: Overview
       path: /community/overview
-    - title: Components
+    - title: Component index
       path: /community/component-index
     - title: Patterns
       path: /community/patterns
