--- a/src/data/index/maintainers.yml
+++ b/src/data/index/maintainers.yml
@@ -1,9 +1,9 @@
 maintainers:
   - name: cdai
-    friendly_name: CD&AI
+    friendly_name: Cloud Data & AI
   - name: cloud-pal
     friendly_name: Cloud PAL
   - name: watson-health
     friendly_name: Watson Health
   - name: watson-iot
-    friendly_name: Watson IoT
+    friendly_name: AI Apps
