--- a/src/data/index/maintainers.yml
+++ b/src/data/index/maintainers.yml
@@ -5,5 +5,5 @@ maintainers:
     friendly_name: Cloud PAL
   - name: watson-health
     friendly_name: Watson Health
-  - name: watson-iot
+  - name: ai-apps
     friendly_name: AI Apps
