--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
         run: curl -fsSL https://clis.cloud.ibm.com/install/osx | sh
 
       - name: Install Cloud Foundry CLI
-        run: ibmcloud cf install
+        run: ibmcloud cf install -v 6.51.0
 
       - name: Login to ibmcloud
         env:
