--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -50,8 +50,8 @@
       path: /whats-happening/changelog-and-roadmap
     - title: News and articles
       path: /whats-happening/news-and-articles
-    - title: Events
-      path: /whats-happening/events
+    - title: Meetups
+      path: /whats-happening/meetups
     - title: Work in progress
       path: /whats-happening/work-in-progress
   hasDivider: true
