fix faq redirect

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -214,7 +214,7 @@
 - title: Help
   pages:
     - title: FAQs
-      path: /help/faqs
+      path: /help/faq
     - title: Certificate of Originality
       path: /help/certificate-of-originality
     - title: Migration guide
