docs: curly quote fix for left nav

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -44,7 +44,7 @@
       path: /contributing/contribute-pictograms
     - title: Add ons
       path: /contributing/add-ons
-- title: What's happening
+- title: What’s happening
   pages:
     - title: Changelog and roadmap
       path: /whats-happening/changelog-and-roadmap
