[community index] - More descriptive title for charting offering

--- a/src/data/index/ai-apps/charts.yml
+++ b/src/data/index/ai-apps/charts.yml
@@ -1,4 +1,4 @@
-name: Charts
+name: Charts - Watson IoT
 website_url: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/charts/overview
 code_url: >-
