draft page for governance info

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -4,6 +4,8 @@
       path: /all-about-carbon/what-is-carbon
     - title: How we work
       path: /all-about-carbon/how-we-work
+    - title: The team
+      path: /all-about-carbon/the-team
 - title: Designing
   pages:
     - title: Get started
