--- a/package.json
+++ b/package.json
@@ -40,6 +40,11 @@
     "carbon-components": "^10.17.0",
     "carbon-components-react": "^7.17.0"
   },
+  "dependencies": {
+    "carbon-components-react": "^7.16.0",
+    "classnames": "^2.2.6",
+    "react": "^16.8.6"
+  },
   "devDependencies": {
     "@babel/core": "^7.11.1",
     "@carbon/charts": "0.34.11",
@@ -57,9 +62,7 @@
     "babel-eslint": "^10.1.0",
     "babel-preset-gatsby": "^0.2.29",
     "carbon-components": "^10.16.0",
-    "carbon-components-react": "^7.16.0",
     "change-case": "^4.1.1",
-    "classnames": "^2.2.6",
     "codesandbox": "^2.1.10",
     "copy-to-clipboard": "^3.2.1",
     "d3": "^5.12.0",
@@ -100,7 +103,6 @@
     "prettier-config-carbon": "^0.2.0",
     "prismjs": "^1.17.1",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.12.0",
     "react-ga": "^2.6.0",
