docs: updates to order and title of team page

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -2,10 +2,10 @@
   pages:
     - title: What is Carbon?
       path: /all-about-carbon/what-is-carbon
+    - title: Who we are
+      path: /all-about-carbon/the-team
     - title: How we work
       path: /all-about-carbon/how-we-work
-    - title: The team
-      path: /all-about-carbon/the-team
 - title: Designing
   pages:
     - title: Get started
