Adding dotcom components to index and reordered filters

--- a/src/data/index/maintainers.yml
+++ b/src/data/index/maintainers.yml
@@ -7,3 +7,5 @@ maintainers:
     friendly_name: Watson Health
   - name: ai-apps
     friendly_name: AI Apps
+  - name: dot-com
+    friendly_name: IBM.com
