feat(feedback): send dialog feedback to slack channel

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "carbon-components-react": "^7.18.0"
   },
   "dependencies": {
+    "@slack/web-api": "^5.11.0",
     "carbon-components-react": "^7.18.0",
     "classnames": "^2.2.6",
     "react": "^16.8.6"
@@ -116,7 +117,7 @@
     }
   },
   "lint-staged": {
-    "*.{js,ts}": [
+    "*.{js}": [
       "eslint --fix"
     ],
     "*.{css,scss,json,html,yaml,md,mdx}": [
