docs: nav tweaks

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -2,9 +2,9 @@
   pages:
     - title: What is Carbon?
       path: /all-about-carbon/what-is-carbon
-    - title: Who we are
+    - title: The team
       path: /all-about-carbon/the-team
-    - title: How we work
+    - title: How Carbon works
       path: /all-about-carbon/how-carbon-works
 - title: Designing
   pages:
