initial docs on adding a component to the index

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -187,6 +187,8 @@
       path: /community/overview
     - title: Component index
       path: /community/component-index
+    - title: Contributing a component
+      path: /community/contributing-a-component
     - title: Patterns
       path: /community/patterns
     - title: Domain guidance
