repurposing component index code for charts index

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -187,6 +187,8 @@
       path: /community/overview
     - title: Component index
       path: /community/component-index
+    - title: Chart index
+      path: /community/chart-index
     - title: Patterns
       path: /community/patterns
     - title: Domain guidance
