fix: color token table sticky content switcher

--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
   "dependencies": {
     "carbon-components-react": "^7.18.0",
     "classnames": "^2.2.6",
-    "react": "^16.8.6"
+    "react": "^16.8.6",
+    "react-copy-to-clipboard": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
@@ -103,7 +104,6 @@
     "prettier-config-carbon": "^0.2.0",
     "prismjs": "^1.17.1",
     "prop-types": "^15.7.2",
-    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.12.0",
     "react-ga": "^2.6.0",
     "react-live": "^2.2.1",
