--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "@slack/web-api": "^5.11.0",
     "carbon-components-react": "^7.20.0-rc.0",
     "classnames": "^2.2.6",
-    "react": "^16.8.6"
+    "react": "^16.8.6",
+    "react-copy-to-clipboard": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
@@ -105,7 +106,6 @@
     "prettier-config-carbon": "^0.4.0",
     "prismjs": "^1.17.1",
     "prop-types": "^15.7.2",
-    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.12.0",
     "react-ga": "^2.6.0",
     "react-live": "^2.2.1",
