--- a/package.json
+++ b/package.json
@@ -37,13 +37,13 @@
     "/node_modules/*"
   ],
   "resolutions": {
-    "carbon-components": "^10.20.0-rc.0",
-    "carbon-components-react": "^7.20.0-rc.0",
-    "@carbon/elements": "^10.19.0-rc.0"
+    "carbon-components": "^10.20.0",
+    "carbon-components-react": "^7.20.0",
+    "@carbon/elements": "^10.19.0"
   },
   "dependencies": {
     "@slack/web-api": "^5.11.0",
-    "carbon-components-react": "^7.20.0-rc.0",
+    "carbon-components-react": "^7.20.0",
     "classnames": "^2.2.6",
     "react": "^16.8.6",
     "react-copy-to-clipboard": "^5.0.1"
@@ -52,9 +52,9 @@
     "@babel/core": "^7.11.1",
     "@carbon/charts": "0.34.11",
     "@carbon/charts-react": "0.34.11",
-    "@carbon/elements": "^10.19.0-rc.0",
-    "@carbon/icons": "^10.17.0",
-    "@carbon/icons-react": "^10.17.0",
+    "@carbon/elements": "^10.19.0",
+    "@carbon/icons": "^10.18.0",
+    "@carbon/icons-react": "^10.18.0",
     "@carbon/pictograms": "^10.18.0",
     "@carbon/pictograms-react": "^10.18.0",
     "@loadable/babel-plugin": "^5.12.0",
@@ -64,7 +64,7 @@
     "@philpl/buble": "^0.19.7",
     "babel-eslint": "^10.1.0",
     "babel-preset-gatsby": "^0.2.29",
-    "carbon-components": "^10.20.0-rc.0",
+    "carbon-components": "^10.20.0",
     "change-case": "^4.1.1",
     "codesandbox": "^2.1.10",
     "copy-to-clipboard": "^3.2.1",
