docs: updates to create two team pages

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -6,6 +6,8 @@
       path: /all-about-carbon/how-carbon-works
     - title: The team
       path: /all-about-carbon/the-team
+    - title: Leadership
+      path: /all-about-carbon/leadership
 - title: Designing
   pages:
     - title: Get started
