ai apps changed their site links

--- a/src/data/index/ai-apps/charts.yml
+++ b/src/data/index/ai-apps/charts.yml
@@ -1,4 +1,4 @@
-name: Charts - Watson IoT
+name: Charts - AI Applications
 website_url: >-
   https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/charts/overview
 code_url: >-
