--- a/src/data/index/ai-apps/data-table.yml
+++ b/src/data/index/ai-apps/data-table.yml
@@ -1,12 +1,13 @@
 name: Data table
 website_url: >-
-  https://pages.github.ibm.com/Watson-IoT/IoT-Design-Site/components/datatable/overview
+  https://pages.github.ibm.com/ai-applications/design/components/datatable/overview
 code_url: >-
   https://carbon-addons-iot-react.com/?path=/story/watson-iot-table--simple-stateful-example
 maintainer: Watson IoT
 description: >-
-  The jewel of the IoT PAL, the data table provides a compact layout for viewing
-  and managing large quantities of data.
+  The data table provides a compact layout for viewing and managing large
+  quantities of data while extending Carbon capabilities in a large number of
+  areas.
 framework: React
 design_asset: Sketch
 platform: Web
