tweaks made during our call

--- a/src/data/chart-index/maintainers.yml
+++ b/src/data/chart-index/maintainers.yml
@@ -3,3 +3,5 @@ maintainers:
     friendly_name: Carbon Charts
   - name: cognos
     friendly_name: Cognos
+  - name: ai-apps
+    friendly_name: AI Apps
