docs: add members, projects page

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -8,6 +8,8 @@
       path: /all-about-carbon/the-team
     - title: Leadership
       path: /all-about-carbon/leadership
+    - title: Projects
+      path: /all-about-carbon/projects
 - title: Designing
   pages:
     - title: Get started
