updated naming for cdai to cloud + cognitive

--- a/src/data/index/maintainers.yml
+++ b/src/data/index/maintainers.yml
@@ -1,6 +1,6 @@
 maintainers:
   - name: cdai
-    friendly_name: Cloud Data & AI
+    friendly_name: Cloud & Cognitive
   - name: cloud-pal
     friendly_name: Cloud PAL
   - name: watson-health
