chore(chart-index): fix duplicate titles

--- a/src/data/chart-index/carbon-charts/donut.yml
+++ b/src/data/chart-index/carbon-charts/donut.yml
@@ -1,4 +1,4 @@
-name: donut Chart
+name: Donut Chart
 website_url: >-
   https://www.carbondesignsystem.com/data-visualization/basic-charts/#donut
 code_url: >-
