--- a/src/data/chart-index/carbon-charts/radar.yml
+++ b/src/data/chart-index/carbon-charts/radar.yml
@@ -1,4 +1,4 @@
-name: Meter Chart
+name: Radar Chart
 website_url: >-
   https://www.carbondesignsystem.com/data-visualization/basic-charts/#radar
 code_url: >-
