--- a/src/data/chart-index/carbon-charts/scatter.yml
+++ b/src/data/chart-index/carbon-charts/scatter.yml
@@ -1,4 +1,4 @@
-name: Scatter Chart
+name: Scatter Plot
 website_url: >-
   https://www.carbondesignsystem.com/data-visualization/basic-charts/#scatter
 code_url: >-
@@ -11,7 +11,7 @@ framework: React
 platform: Web
 availability: Open Source
 aliases:
-  - scatter chart
+  - scatter plot
   - scatter time
   - scatter linear
   - scatter discrete
