--- a/src/data/chart-index/carbon-charts/step.yml
+++ b/src/data/chart-index/carbon-charts/step.yml
@@ -1,4 +1,4 @@
-name: Scatter Chart
+name: Step Chart
 website_url: >-
   https://www.carbondesignsystem.com/data-visualization/basic-charts/#step
 code_url: >-
