chore(release): add icons as resolution

--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
   "resolutions": {
     "carbon-components": "^10.21.0-rc.0",
     "carbon-components-react": "^7.21.0-rc.0",
-    "@carbon/elements": "^10.20.0-rc.0"
+    "@carbon/elements": "^10.20.0-rc.0",
+    "@carbon/icons": "^10.19.0-rc.0",
+    "@carbon/icons-react": "^10.19.0-rc.0"
   },
   "dependencies": {
     "@slack/web-api": "^5.11.0",
