docs: team name updates, responsibility updates

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -4,9 +4,9 @@
       path: /all-about-carbon/what-is-carbon
     - title: How Carbon works
       path: /all-about-carbon/how-carbon-works
-    - title: The team
+    - title: The Carbon team
       path: /all-about-carbon/the-team
-    - title: Leadership
+    - title: Partners
       path: /all-about-carbon/leadership
     - title: Projects
       path: /all-about-carbon/projects
