updated filters and test thumbnails

--- a/src/data/chart-index/carbon-charts/bar-horizontal.yml
+++ b/src/data/chart-index/carbon-charts/bar-horizontal.yml
@@ -1,4 +1,4 @@
-name: Bar Horizontal Chart
+name: Bar horizontal chart
 website_url: >-
   https://www.carbondesignsystem.com/data-visualization/basic-charts/#bar-(horizontal)
 code_url: >-
@@ -8,6 +8,7 @@ description: >-
   values. You can use them to compare discrete data or show trends over time.
 framework: React
 platform: Web
+chart_type: Comparisons
 availability: Open Source
 aliases:
   - bar chart
