--- a/src/data/chart-index/carbon-charts/bar-vertical.yml
+++ b/src/data/chart-index/carbon-charts/bar-vertical.yml
@@ -8,6 +8,7 @@ description: >-
   values. You can use them to compare discrete data or show trends over time.
 framework: React
 platform: Web
+chart_type: Comparisons
 availability: Open Source
 aliases:
   - bar chart
