--- a/src/data/chart-index/carbon-charts/radar.yml
+++ b/src/data/chart-index/carbon-charts/radar.yml
@@ -10,6 +10,7 @@ description: >-
 framework: React
 platform: Web
 availability: Open Source
+chart_type: Comparisons
 aliases:
   - radar chart
 date_added: 2020-09-24T00:00:00.000Z
