--- a/src/data/chart-index/carbon-charts/bubble.yml
+++ b/src/data/chart-index/carbon-charts/bubble.yml
@@ -10,6 +10,7 @@ description: >-
 framework: React
 platform: Web
 availability: Open Source
+chart_type: Comparisons
 aliases:
   - bubble chart
   - bubble linear
