--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -2,8 +2,12 @@
   pages:
     - title: What is Carbon?
       path: /all-about-carbon/what-is-carbon
-    - title: How we work
-      path: /all-about-carbon/how-we-work
+    - title: How Carbon works
+      path: /all-about-carbon/how-carbon-works
+    - title: The Carbon team
+      path: /all-about-carbon/the-team
+    - title: Partners
+      path: /all-about-carbon/partners
 - title: Designing
   pages:
     - title: Get started
