added a 'complexity' filter

--- a/src/data/chart-index/ai-apps/area.yml
+++ b/src/data/chart-index/ai-apps/area.yml
@@ -7,6 +7,8 @@ description: >-
   proportional contributions within a category.
 platform: Web
 availability: Open Source
+complexity: Basic
+chart_type: Other
 aliases:
   - stack chart
   - area stack
