images for all carbon-charts, fix capitalization

--- a/src/data/chart-index/ai-apps/area.yml
+++ b/src/data/chart-index/ai-apps/area.yml
@@ -1,4 +1,4 @@
-name: Area Chart
+name: Area chart
 website_url: >-
   https://pages.github.ibm.com/ai-applications/design/components/charts/area-chart
 description: >-
