--- a/src/data/chart-index/carbon-charts/bar-vertical.yml
+++ b/src/data/chart-index/carbon-charts/bar-vertical.yml
@@ -1,4 +1,4 @@
-name: Bar Vertical Chart
+name: Bar vertical chart
 website_url: >-
   https://www.carbondesignsystem.com/data-visualization/basic-charts/#bar-(vertical)
 code_url: >-
