--- a/src/data/chart-index/carbon-charts/bubble.yml
+++ b/src/data/chart-index/carbon-charts/bubble.yml
@@ -1,4 +1,4 @@
-name: Bubble Chart
+name: Bubble chart
 website_url: >-
   https://www.carbondesignsystem.com/data-visualization/basic-charts/#bubble
 code_url: >-
