--- a/src/data/chart-index/carbon-charts/gauge.yml
+++ b/src/data/chart-index/carbon-charts/gauge.yml
@@ -1,4 +1,4 @@
-name: Gauge Chart
+name: Gauge chart
 website_url: >-
   https://www.carbondesignsystem.com/data-visualization/basic-charts/#gauge
 code_url: >-
