--- a/src/data/chart-index/carbon-charts/line.yml
+++ b/src/data/chart-index/carbon-charts/line.yml
@@ -1,4 +1,4 @@
-name: Line Chart
+name: Line chart
 website_url: >-
   https://www.carbondesignsystem.com/data-visualization/basic-charts/#line
 code_url: >-
