--- a/src/data/chart-index/carbon-charts/meter.yml
+++ b/src/data/chart-index/carbon-charts/meter.yml
@@ -1,4 +1,4 @@
-name: Meter Chart
+name: Meter chart
 website_url: >-
   https://www.carbondesignsystem.com/data-visualization/basic-charts/#meter
 code_url: >-
