--- a/src/data/chart-index/carbon-charts/pie.yml
+++ b/src/data/chart-index/carbon-charts/pie.yml
@@ -1,4 +1,4 @@
-name: Pie Chart
+name: Pie chart
 website_url: >-
   https://www.carbondesignsystem.com/data-visualization/basic-charts/#pie
 code_url: >-
