--- a/src/data/chart-index/carbon-charts/scatter.yml
+++ b/src/data/chart-index/carbon-charts/scatter.yml
@@ -1,4 +1,4 @@
-name: Scatter Plot
+name: Scatter plot
 website_url: >-
   https://www.carbondesignsystem.com/data-visualization/basic-charts/#scatter
 code_url: >-
