--- a/src/data/chart-index/ai-apps/pie.yml
+++ b/src/data/chart-index/ai-apps/pie.yml
@@ -1,4 +1,4 @@
-name: Pie / Donut / Gauge charts
+name: Pie / donut / gauge charts
 website_url: >-
   https://pages.github.ibm.com/ai-applications/design/components/charts/piedonutgauge
 description: >-
