--- a/src/data/chart-index/carbon-charts/area.yml
+++ b/src/data/chart-index/carbon-charts/area.yml
@@ -1,4 +1,4 @@
-name: Area Chart
+name: Area chart
 website_url: >-
   https://www.carbondesignsystem.com/data-visualization/basic-charts#area
 code_url: >-
