cleanup and page title change

--- a/src/data/chart-index/ai-apps/master-detail.yml
+++ b/src/data/chart-index/ai-apps/master-detail.yml
@@ -2,7 +2,10 @@ name: Master detail
 website_url: >-
   https://pages.github.ibm.com/ai-applications/design/components/charts/masterdetail
 description: >-
-  This chart needs a description
+  Create a master detail relationship to deliver information that would
+  otherwise require two or more reports. For example, you can combine a list
+  with a chart. The list can contain product lines and the chart can show
+  details for each product line.
 platform: Web
 availability: Open Source
 complexity: Advanced
