--- a/src/data/chart-index/ai-apps/weighted-tree.yml
+++ b/src/data/chart-index/ai-apps/weighted-tree.yml
@@ -2,7 +2,8 @@ name: Weighted tree
 website_url: >-
   https://pages.github.ibm.com/ai-applications/design/components/charts/weightedtree
 description: >-
-  This chart needs a description
+  The weighted tree is an ideal way to represent asymmetric hierarchal
+  information in an easy to read visualization.
 platform: Web
 availability: Open Source
 complexity: Advanced
