--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -189,8 +189,8 @@
       path: /community/overview
     - title: Component index
       path: /community/component-index
-    - title: Chart index
-      path: /community/chart-index
+    - title: Data visualization index
+      path: /community/data-visualization-index
     - title: Patterns
       path: /community/patterns
     - title: Domain guidance
