fix misspelt chart name

--- a/src/data/chart-index/ai-apps/bullet-graph.yml
+++ b/src/data/chart-index/ai-apps/bullet-graph.yml
@@ -1,4 +1,4 @@
-name: Bubble graph
+name: Bullet graph
 website_url: >-
   https://pages.github.ibm.com/ai-applications/design/components/charts/bullet
 description: >-
