repurposing component index code for charts index (#1746)
* repurposing component index code for charts index

* dummy data causing build prob?

* dummy data

* does it build with parameter absent, not incorrect

* tweaks made during our call

* added ai-apps basic charts

* feat(chart-index): add carbon charts files to index

* chore(chart-index): fix duplicate titles

* updated filters and test thumbnails

* Optimised images with calibre/image-actions

* added 'Other' as a valid option for chart type

* added a 'complexity' filter

* Optimised images with calibre/image-actions

* Added advanced charts from carbon and ai-apps

* images for all carbon-charts, fix capitalization

* cleanup and page title change

* remove cognos as maintainer until they have content

* add contribution note to no result text

* fix misspelt chart name

* Optimised images with calibre/image-actions

* resolve image conflict

* Optimised images with calibre/image-actions

* Optimised images with calibre/image-actions

Co-authored-by: Alessandra Davila <aledavila@ibm.com>
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -193,6 +193,8 @@
       path: /community/overview
     - title: Component index
       path: /community/component-index
+    - title: Data visualization index
+      path: /community/data-visualization-index
     - title: Patterns
       path: /community/patterns
     - title: Domain guidance
