--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "gatsby": "^2.19.8",
     "gatsby-image": "^2.4.15",
     "gatsby-plugin-lodash": "^3.1.3",
+    "gatsby-plugin-manifest": "^2.4.34",
     "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "gatsby-plugin-sharp": "^2.6.27",
     "gatsby-plugin-sitemap": "^2.2.30",
