chore(release): update to v10.22.0-rc.0

--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "/node_modules/*"
   ],
   "resolutions": {
-    "carbon-components": "^10.21.0",
-    "carbon-components-react": "^7.21.0",
+    "carbon-components": "^10.22.0-rc.0",
+    "carbon-components-react": "^7.22.0-rc.0",
     "@carbon/elements": "^10.20.0",
     "@carbon/icons": "^10.19.0",
     "@carbon/icons-react": "^10.19.0",
@@ -46,7 +46,7 @@
   },
   "dependencies": {
     "@slack/web-api": "^5.11.0",
-    "carbon-components-react": "^7.21.0",
+    "carbon-components-react": "^7.22.0-rc.0",
     "classnames": "^2.2.6",
     "react": "^16.8.6",
     "react-copy-to-clipboard": "^5.0.1"
@@ -67,7 +67,7 @@
     "@philpl/buble": "^0.19.7",
     "babel-eslint": "^10.1.0",
     "babel-preset-gatsby": "^0.2.29",
-    "carbon-components": "^10.21.0",
+    "carbon-components": "^10.22.0-rc.0",
     "change-case": "^4.1.1",
     "codesandbox": "^2.1.10",
     "copy-to-clipboard": "^3.2.1",
