content-ibmdotcom-case-study

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -4,6 +4,8 @@
       path: /all-about-carbon/what-is-carbon
     - title: How Carbon works
       path: /all-about-carbon/how-carbon-works
+    - title: Case studies
+      path: /all-about-carbon/case-studies/IBMcom
     - title: The Carbon team
       path: /all-about-carbon/the-team
     - title: Partners
