--- a/package.json
+++ b/package.json
@@ -45,32 +45,43 @@
     "gatsby-remark-images": "^3.3.33"
   },
   "dependencies": {
-    "@slack/web-api": "^5.11.0",
-    "carbon-components-react": "^7.23.0-rc.0",
-    "classnames": "^2.2.6",
-    "react": "^16.8.6",
-    "react-copy-to-clipboard": "^5.0.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.11.1",
     "@carbon/charts": "0.34.11",
     "@carbon/charts-react": "0.34.11",
     "@carbon/elements": "^10.22.0-rc.0",
     "@carbon/icons": "^10.20.0-rc.0",
     "@carbon/icons-react": "^10.20.0-rc.0",
     "@carbon/pictograms": "^10.18.0",
+    "@loadable/component": "^5.12.0",
+    "@slack/web-api": "^5.11.0",
+    "carbon-components": "^10.23.0-rc.0",
+    "carbon-components-react": "^7.23.0-rc.0",
+    "change-case": "^4.1.1",
+    "classnames": "^2.2.6",
+    "codesandbox": "^2.1.10",
+    "copy-to-clipboard": "^3.2.1",
+    "gatsby": "^2.19.8",
+    "gatsby-image": "^2.4.15",
+    "gatsby-theme-carbon": "^1.27.0",
+    "lodash-es": "^4.17.15",
+    "markdown-it": "^9.0.1",
+    "nanoid": "^2.1.11",
+    "prettier-config-carbon": "^0.4.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-copy-to-clipboard": "^5.0.1",
+    "react-live": "^2.2.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.11.1",
+    "@carbon/icons": "^10.20.0-rc.0",
+    "@carbon/pictograms": "^10.18.0",
     "@carbon/pictograms-react": "^10.18.0",
     "@loadable/babel-plugin": "^5.12.0",
-    "@loadable/component": "^5.12.0",
     "@loadable/webpack-plugin": "^5.12.0",
     "@now/node": "^1.6.1",
     "@philpl/buble": "^0.19.7",
     "babel-eslint": "^10.1.0",
     "babel-preset-gatsby": "^0.2.29",
-    "carbon-components": "^10.23.0-rc.0",
-    "change-case": "^4.1.1",
-    "codesandbox": "^2.1.10",
-    "copy-to-clipboard": "^3.2.1",
     "d3": "^5.12.0",
     "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
@@ -85,8 +96,6 @@
     "eslint-plugin-react-hooks": "^2.5.1",
     "fs-extra": "^9.0.1",
     "fuse.js": "^6.4.1",
-    "gatsby": "^2.19.8",
-    "gatsby-image": "^2.4.15",
     "gatsby-plugin-lodash": "^3.1.3",
     "gatsby-plugin-manifest": "^2.4.34",
     "gatsby-plugin-remove-serviceworker": "^1.0.0",
@@ -94,23 +103,16 @@
     "gatsby-plugin-sitemap": "^2.2.30",
     "gatsby-remark-images": "^3.3.33",
     "gatsby-source-filesystem": "^2.3.24",
-    "gatsby-theme-carbon": "^1.27.0",
     "gatsby-transformer-sharp": "^2.5.13",
     "html-loader": "^0.5.5",
     "husky": "^4.2.3",
     "lint-staged": ">=10.0.9",
-    "lodash-es": "^4.17.15",
-    "markdown-it": "^9.0.1",
     "markdown-loader": "^5.0.0",
-    "nanoid": "^2.1.11",
     "node-fetch": "^3.0.0-beta.7",
     "prettier": "^2.0.2",
-    "prettier-config-carbon": "^0.4.0",
     "prismjs": "^1.17.1",
-    "prop-types": "^15.7.2",
     "react-dom": "^16.12.0",
     "react-ga": "^2.6.0",
-    "react-live": "^2.2.1",
     "use-media": "^1.4.0",
     "use-resize-observer": "^4.0.0"
   },
