--- a/src/data/index/cdai/file-uploader.yml
+++ b/src/data/index/cdai/file-uploader.yml
@@ -1,7 +1,8 @@
 name: File uploader
 website_url: 'https://pages.github.ibm.com/cdai-design/pal/components/file-uploader/usage'
 maintainer: CD&AI
-description: Uploading is transferring a resource from a local system to a remote system.
+description: >-
+  Uploading is transferring a resource from a local system to a remote system.
 design_asset: Sketch
 platform: Web
 availability: IBM Internal
@@ -9,3 +10,4 @@ aliases:
   - input
   - form
 date_added: 2020-08-04T00:00:00.000Z
+fathom_goal: YOSWQEZ4
