--- a/.eslintrc
+++ b/.eslintrc
@@ -1,14 +1,31 @@
 {
-  "extends": ["wesbos"],
+  "root": true,
   "globals": {
     "fathom": "readonly"
   },
+  "env": {
+    "node": true,
+    "browser": true,
+    "commonjs": true,
+    "es6": true
+  },
+  "parser": "babel-eslint",
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:react-hooks/recommended",
+    "plugin:jsx-a11y/recommended",
+    "plugin:import/errors",
+    "plugin:import/warnings",
+    "prettier",
+    "prettier/react"
+  ],
   "rules": {
-    "react/prop-types": 0,
-    "react/destructuring-assignment": 0,
-    "react/no-access-state-in-setstate": 0,
-    "react/jsx-props-no-spreading": 0,
-    "react/state-in-constructor": ["error", "never"],
-    "no-useless-escape": 0
+    "react/prop-types": 0
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   }
 }
