--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "update-browserslist": "npx browserslist-ga"
   },
   "engines": {
-    "node": "10.x || 12.x || 13.x"
+    "node": "<=10"
   },
   "browserslist": [
     "last 1 edge version",
@@ -53,12 +53,19 @@
     "@carbon/pictograms": "^10.18.0",
     "@loadable/component": "^5.12.0",
     "@slack/web-api": "^5.11.0",
+    "babel-eslint": "^10.1.0",
     "carbon-components": "^10.23.2",
     "carbon-components-react": "^7.23.2",
     "change-case": "^4.1.1",
     "classnames": "^2.2.6",
     "codesandbox": "^2.1.10",
     "copy-to-clipboard": "^3.2.1",
+    "eslint": "^7.13.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "fuse.js": "^6.4.1",
     "gatsby": "^2.19.8",
     "gatsby-image": "^2.4.15",
@@ -80,20 +87,9 @@
     "@loadable/webpack-plugin": "^5.12.0",
     "@now/node": "^1.6.1",
     "@philpl/buble": "^0.19.7",
-    "babel-eslint": "^10.1.0",
     "babel-preset-gatsby": "^0.2.29",
     "d3": "^5.12.0",
     "dotenv": "^8.2.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-config-wesbos": "0.0.19",
-    "eslint-plugin-html": "^6.0.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^2.5.1",
     "fs-extra": "^9.0.1",
     "gatsby-plugin-lodash": "^3.1.3",
     "gatsby-plugin-manifest": "^2.4.34",
@@ -108,7 +104,6 @@
     "lint-staged": ">=10.0.9",
     "markdown-loader": "^5.0.0",
     "node-fetch": "^3.0.0-beta.7",
-    "prettier": "^2.0.2",
     "prismjs": "^1.17.1",
     "react-dom": "^16.12.0",
     "react-ga": "^2.6.0",
