--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "update-browserslist": "npx browserslist-ga"
   },
   "engines": {
-    "node": ">=10"
+    "node": "*"
   },
   "browserslist": [
     "last 1 edge version",
