--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -14,7 +14,7 @@
   pages:
     - title: Overview
       path: /case-studies/overview
-    - title: IBM commerce platform
+    - title: IBM Commerce Platform
       path: /case-studies/ibm-commerce-platform
 - title: Designing
   pages:
