--- a/package.json
+++ b/package.json
@@ -37,24 +37,24 @@
     "/node_modules/*"
   ],
   "resolutions": {
-    "carbon-components": "^10.25.0",
-    "carbon-components-react": "^7.25.0",
-    "@carbon/elements": "^10.24.0",
-    "@carbon/icons": "^10.22.0",
-    "@carbon/icons-react": "^10.22.0",
+    "carbon-components": "^10.26.0-rc.0",
+    "carbon-components-react": "^7.26.0-rc.0",
+    "@carbon/elements": "^10.25.0-rc.0",
+    "@carbon/icons": "^10.23.0-rc.0",
+    "@carbon/icons-react": "^10.23.0-rc.0",
     "gatsby-remark-images": "^3.3.33"
   },
   "dependencies": {
     "@carbon/charts": "0.34.11",
     "@carbon/charts-react": "0.34.11",
-    "@carbon/elements": "^10.24.0",
-    "@carbon/icons": "^10.22.0",
-    "@carbon/icons-react": "^10.22.0",
-    "@carbon/pictograms": "^11.0.0",
+    "@carbon/elements": "^10.25.0-rc.0",
+    "@carbon/icons": "^10.23.0-rc.0",
+    "@carbon/icons-react": "^10.23.0-rc.0",
+    "@carbon/pictograms": "^11.1.0-rc.0",
     "@loadable/component": "^5.12.0",
     "@slack/web-api": "^5.11.0",
-    "carbon-components": "^v10.25.0",
-    "carbon-components-react": "^7.25.0",
+    "carbon-components": "^10.26.0-rc.0",
+    "carbon-components-react": "^7.26.0-rc.0",
     "change-case": "^4.1.1",
     "classnames": "^2.2.6",
     "codesandbox": "^2.1.10",
@@ -74,8 +74,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
-    "@carbon/pictograms": "^11.0.0",
-    "@carbon/pictograms-react": "^11.0.0",
+    "@carbon/pictograms": "^11.1.0-rc.0",
+    "@carbon/pictograms-react": "^11.1.0-rc.0",
     "@loadable/babel-plugin": "^5.12.0",
     "@loadable/webpack-plugin": "^5.12.0",
     "@now/node": "^1.6.1",
