chore: experiment with telemetry package

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@carbon/elements": "^10.25.0-rc.0",
     "@carbon/icons": "^10.23.0-rc.0",
     "@carbon/icons-react": "^10.23.0-rc.0",
+    "@carbon/telemetry": "0.0.0-experimental-2",
     "gatsby-remark-images": "^3.3.33"
   },
   "dependencies": {
