--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -8,6 +8,12 @@
       path: /all-about-carbon/the-team
     - title: Partners
       path: /all-about-carbon/partners
+- title: Case studies
+  pages:
+    - title: Overview
+      path: /case-studies/overview
+    - title: IBM Commerce Platform
+      path: /case-studies/ibm-commerce-platform
 - title: Designing
   pages:
     - title: Get started
