--- a/src/data/index/cloud-pal/card.yml
+++ b/src/data/index/cloud-pal/card.yml
@@ -1,10 +1,9 @@
 name: Card
-website_url: 'https://pages.github.ibm.com/ibmcloud/pal/components/card/usage'
+website_url: 'https://pages.github.ibm.com/cdai-design/pal/components/card/overview/'
 code_url: 'https://github.ibm.com/ibmcloud/pal/tree/master/patterns/src/Components/Card'
 maintainer: Cloud PAL
 description: >-
-  A card is a flexible-sized container that groups related blocks of content and
-  information into one understandable unit.
+  Cards act as an entry point to a specific subject or user flow; they provide summaries of information pooled together and presented in a digestible way.
 framework: React
 design_asset: Sketch
 platform: Web
@@ -13,5 +12,6 @@ aliases:
   - tile
   - module
   - container
+  - widget
 date_added: 2020-08-04T00:00:00.000Z
 fathom_goal: 5XDZGJSQ
