feat(docs): add telemetry page

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -231,5 +231,7 @@
       path: /help/certificate-of-originality
     - title: Migration guide
       path: /help/migration-guide/overview
+    - title: Telemetry
+      path: /help/telemetry
     - title: Contact us
       path: /help/contact-us
