docs: cloud pal case study

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -14,6 +14,8 @@
       path: /case-studies/overview
     - title: IBM Commerce Platform
       path: /case-studies/ibm-commerce-platform
+    - title: 'Carbon 10: Before and after'
+      path: /case-studies/carbon-10-before-and-after
 - title: Designing
   pages:
     - title: Get started
