--- a/.github/workflows/dco.yml
+++ b/.github/workflows/dco.yml
@@ -3,7 +3,7 @@ on:
   issue_comment:
     types: [created]
   pull_request_target:
-    types: [opened, synchronize]
+    types: [opened, closed, synchronize]
 
 jobs:
   DCO:
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: "DCO Assistant"
         if: (github.event.comment.body == 'recheck' || github.event.comment.body == 'I have read the DCO document and I hereby sign the DCO.') || github.event_name == 'pull_request_target'
-        uses: cla-assistant/github-action@6cfe025afc31eb0bdd08e23d3f2e9ed141ab2c09
+        uses: cla-assistant/github-action@v2.1.2-beta
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
@@ -27,4 +27,5 @@ jobs:
           custom-notsigned-prcomment: "Thanks for your submission! We ask that $you sign our [Developer Certificate of Origin](https://github.com/carbon-design-system/carbon-dco/blob/main/dco.md) before we can accept your contribution. You can sign the DCO by adding a comment below using this text:"
           custom-pr-sign-comment: "I have read the DCO document and I hereby sign the DCO."
           custom-allsigned-prcomment: "All contributors have signed the DCO."
+          lock-pullrequest-aftermerge: false
           use-dco-flag: true
