--- a/package.json
+++ b/package.json
@@ -37,25 +37,25 @@
     "/node_modules/*"
   ],
   "resolutions": {
-    "carbon-components": "^10.30.0-rc.0",
-    "carbon-components-react": "^7.30.0-rc.0",
-    "@carbon/elements": "^10.29.0-rc.0",
-    "@carbon/icons": "^10.27.0-rc.0",
-    "@carbon/icons-react": "^10.27.0-rc.0",
+    "carbon-components": "^10.32.0",
+    "carbon-components-react": "^7.32.0",
+    "@carbon/elements": "^10.31.0",
+    "@carbon/icons": "^10.29.0",
+    "@carbon/icons-react": "^10.29.0",
     "gatsby-remark-images": "^3.3.33"
   },
   "dependencies": {
     "@carbon/charts": "0.34.11",
     "@carbon/charts-react": "0.34.11",
-    "@carbon/elements": "^10.29.0-rc.0",
-    "@carbon/icons": "^10.27.0-rc.0",
-    "@carbon/icons-react": "^10.27.0-rc.0",
-    "@carbon/pictograms": "^11.5.0-rc.0",
-    "@carbon/pictograms-react": "^11.5.0-rc.0",
+    "@carbon/elements": "^10.31.0",
+    "@carbon/icons": "^10.29.0",
+    "@carbon/icons-react": "^10.29.0",
+    "@carbon/pictograms": "^11.7.0",
+    "@carbon/pictograms-react": "^11.7.0",
     "@loadable/component": "^5.12.0",
     "@slack/web-api": "^5.11.0",
-    "carbon-components": "^10.30.0-rc.0",
-    "carbon-components-react": "^7.30.0-rc.0",
+    "carbon-components": "^10.32.0",
+    "carbon-components-react": "^7.32.0",
     "change-case": "^4.1.1",
     "classnames": "^2.2.6",
     "codesandbox": "^2.1.10",
