--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -12,8 +12,8 @@
   pages:
     - title: Overview
       path: /case-studies/overview/
-    - title: 'Carbon 10: Before and after'
-      path: /case-studies/carbon-10-before-and-after
+    - title: Consistency in the Cloud
+      path: /case-studies/consistency-in-the-cloud
     - title: IBM Commerce Platform
       path: /case-studies/ibm-commerce-platform
 - title: Designing
