content: cloud case study (#2189)
* docs: cloud pal case study

* Update src/pages/case-studies/carbon-10-before-and-after.mdx

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

* Update src/pages/case-studies/carbon-10-before-and-after.mdx

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

* Update src/pages/case-studies/carbon-10-before-and-after.mdx

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

* Update src/pages/case-studies/carbon-10-before-and-after.mdx

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

* Update src/pages/case-studies/carbon-10-before-and-after.mdx

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

* Update src/pages/case-studies/carbon-10-before-and-after.mdx

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

* Update src/pages/case-studies/carbon-10-before-and-after.mdx

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

* content updates

* Update src/pages/case-studies/carbon-10-before-and-after.mdx

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

* Update src/pages/case-studies/carbon-10-before-and-after.mdx

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

* update title

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -12,8 +12,10 @@
   pages:
     - title: Overview
       path: /case-studies/overview/
+    - title: Consistency in the Cloud
+      path: /case-studies/consistency-in-the-cloud
     - title: IBM Commerce Platform
-      path: /case-studies/ibm-commerce-platform/
+      path: /case-studies/ibm-commerce-platform
 - title: Designing
   pages:
     - title: Get started
