docs: rename to changelog-and-roadmap to releaeses

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -60,8 +60,8 @@
       path: /contributing/add-ons/
 - title: What’s happening
   pages:
-    - title: Changelog and roadmap
-      path: /whats-happening/changelog-and-roadmap/
+    - title: Releases
+      path: /whats-happening/releases/
     - title: News and articles
       path: /whats-happening/news-and-articles/
     - title: Meetups
