--- a/conf.d/rewrite.conf
+++ b/conf.d/rewrite.conf
@@ -26,7 +26,8 @@ rewrite /get-started/design/(.*) /designing/get-started/kits/\$1 permanent;
 rewrite /how-to-contribute/(.*) /contributing/\$1 permanent;
 
 # What's happening
-rewrite /updates/whats-new /whats-happening/changelog-and-roadmap permanent;
+rewrite /updates/whats-new /whats-happening/releases permanent;
+rewrite /whats-happening/changelog-and-roadmap /whats-happening/releases permanent;
 rewrite /updates/work-in-progress /whats-happening/work-in-progress permanent;
 
 # Help
