--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-live": "^2.2.1"
+    "react-live": "^2.2.1",
+    "use-media": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
@@ -111,7 +112,6 @@
     "prismjs": "^1.17.1",
     "react-dom": "^16.12.0",
     "react-ga": "^2.6.0",
-    "use-media": "^1.4.0",
     "use-resize-observer": "^4.0.0"
   },
   "husky": {
