comms: new v11 release page

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -62,6 +62,8 @@
   pages:
     - title: Releases
       path: /whats-happening/releases/
+    - title: The v11 release
+      path: /whats-happening/v11-release/
     - title: News and articles
       path: /whats-happening/news-and-articles/
     - title: Meetups
