IA: add new divider, reorg groups

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -16,6 +16,19 @@
       path: /case-studies/consistency-in-the-cloud
     - title: IBM Commerce Platform
       path: /case-studies/ibm-commerce-platform
+- title: What’s happening
+  pages:
+    - title: Releases
+      path: /whats-happening/releases/
+    - title: The v11 release
+      path: /whats-happening/v11-release/
+    - title: News and articles
+      path: /whats-happening/news-and-articles/
+    - title: Meetups
+      path: /whats-happening/meetups/
+    - title: Work in progress
+      path: /whats-happening/work-in-progress/
+  hasDivider: true
 - title: Designing
   pages:
     - title: Get started
@@ -58,18 +71,6 @@
       path: /contributing/contribute-pictograms/
     - title: Add ons
       path: /contributing/add-ons/
-- title: What’s happening
-  pages:
-    - title: Releases
-      path: /whats-happening/releases/
-    - title: The v11 release
-      path: /whats-happening/v11-release/
-    - title: News and articles
-      path: /whats-happening/news-and-articles/
-    - title: Meetups
-      path: /whats-happening/meetups/
-    - title: Work in progress
-      path: /whats-happening/work-in-progress/
   hasDivider: true
 - title: Guidelines
   pages:
