chore: temporarily remove status indicator from sidenav

--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -198,8 +198,8 @@
       path: /patterns/overflow-content/
     - title: Search
       path: /patterns/search-pattern/
-    - title: Status indicators
-      path: /patterns/status-indicator-pattern/
+#    - title: Status indicators
+#      path: /patterns/status-indicator-pattern/
     - title: Text toolbar
       path: /patterns/text-toolbar-pattern/
 - title: Community assets
