--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -2,8 +2,10 @@
   pages:
     - title: What is Carbon?
       path: /all-about-carbon/what-is-carbon/
-    - title: How Carbon works
-      path: /all-about-carbon/how-carbon-works/
+    - title: Who uses Carbon?
+      path: /all-about-carbon/who-uses-carbon/
+    - title: The Carbon ecosystem
+      path: /all-about-carbon/the-carbon-ecosystem/
     - title: The Carbon team
       path: /all-about-carbon/the-team/
     - title: Partners
